# ChangeLog for dev-cpp/gtkmm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.166 2009/10/08 21:57:18 maekke Exp $

  08 Oct 2009; Markus Meier <maekke@gentoo.org> gtkmm-2.16.0.ebuild:
  arm stable, bug #285586

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org> gtkmm-2.16.0.ebuild:
  Stable on alpha, bug #285586

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> gtkmm-2.16.0.ebuild:
  Stable for HPPA (bug #285586).

  27 Sep 2009; nixnut <nixnut@gentoo.org> gtkmm-2.16.0.ebuild:
  ppc stable #285586

  25 Sep 2009; Brent Baude <ranger@gentoo.org> gtkmm-2.16.0.ebuild:
  Marking gtkmm-2.16.0 ppc64 stable for bug 285586

  22 Sep 2009; Markus Meier <maekke@gentoo.org> gtkmm-2.16.0.ebuild:
  x86 stable, bug #285586

  20 Sep 2009; Olivier Crête <tester@gentoo.org> gtkmm-2.16.0.ebuild:
  Stable on amd64, bug #285586

*gtkmm-2.16.0 (10 May 2009)

  10 May 2009; Gilles Dartiguelongue <eva@gentoo.org> gtkmm-2.12.1.ebuild,
  -gtkmm-2.14.1.ebuild, +gtkmm-2.16.0.ebuild:
  New version for GNOME 2.26. Clean up old revisions.

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> gtkmm-2.12.7.ebuild:
  arm/sh stable

  24 Mar 2009; Rémi Cardona <remi@gentoo.org> gtkmm-2.12.1.ebuild,
  gtkmm-2.12.7.ebuild, gtkmm-2.14.1.ebuild, gtkmm-2.14.3.ebuild:
  drop the accessibility USE flag, always build atkmm instead (fixes bug
  #247249)

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> gtkmm-2.12.1.ebuild,
  gtkmm-2.12.7.ebuild, gtkmm-2.14.1.ebuild, gtkmm-2.14.3.ebuild:
  Add a big, fat warning about changing the accessibilty USE flag. Bug
  #247249

*gtkmm-2.14.3 (14 Nov 2008)

  14 Nov 2008; Rémi Cardona <remi@gentoo.org> +gtkmm-2.14.3.ebuild:
  bump to 2.14.3 with tiny changes to configure options

*gtkmm-2.14.1 (08 Nov 2008)

  08 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org> +gtkmm-2.14.1.ebuild:
  New version for GNOME 2.24.

  30 Sep 2008; Jeroen Roovers <jer@gentoo.org> gtkmm-2.12.7.ebuild: