@@ -1,9 +1,7 @@
 AUX gtkmm-2.12.7-gtk2_14-compatibility.patch 2205 RMD160 3d65c0edd8a697648bf941da7ad48879008d1665 SHA1 150a24d053a7f8dbc7900e3de455bc630facd376 SHA256 093b450d90c7c672f0235fa005a0a6197b7b3a45b9a45410c6e906b580df9088
-DIST gtkmm-2.12.7.tar.bz2 15198578 RMD160 0363b0c03e56e965d1d25f1bbed80476af809f3c SHA1 ee7211c99e860c4b22091e81e6d1676d12fbb23c SHA256 4e58c9ad827759a2375b3c0d39952b5b2983111ab16ee329b10a34792fb1d9eb
-DIST gtkmm-2.14.3.tar.bz2 8667875 RMD160 014abe318544e9cfd95b62a2ac6d05fe14b3f84b SHA1 7cbccba6956a46f0613eb210aaf18b5bb549f179 SHA256 24b18105636cea1033658a0a5f7e86783d0e620590aa359a005ba64d055559a2
 DIST gtkmm-2.16.0.tar.bz2 9313258 RMD160 db9ce4005b7f6aecd88715c02f0ab9c43932e063 SHA1 e8cde1ebf651458c815d5e896bbae2ae4bf33d67 SHA256 9994e6a92f7086adb58aba0431f29a766218f806b9db95359dad59a0615f95bf
-EBUILD gtkmm-2.12.7.ebuild 1056 RMD160 8a0ee17a0b812767f27fb6cc958865d99f6aa69a SHA1 37179207d5b4fabca5d11cf34b5c00f166f5583e SHA256 95d2eb9960ec0d4af07c1617cc963bbaee6a75303b0915d985fbc27394619d81
-EBUILD gtkmm-2.14.3.ebuild 935 RMD160 856299f46488d661b1213b8b84758a37a71e8835 SHA1 dd6b2f6371bb2c8f483c0a954abf022a76b14990 SHA256 5fa4c652f38da6f96bd76262bbb8c9d8e9002833eb9d6f886db7ce5bde702322
-EBUILD gtkmm-2.16.0.ebuild 937 RMD160 54a9836245e8f6939807223020c6db740d09631f SHA1 a59f0c202dd76915a35251b6d52b2b1eddc96179 SHA256 7ebbaf0c2920fb8812e44cfa02d0fe8212672ebaf359d74ada8e7bb88f5e9f3c
-MISC ChangeLog 22678 RMD160 d28141471e29a3fbc6389ad7a806a2c50dc4c23e SHA1 d1660ab8d269bc6a108f86e292732072d04525a8 SHA256 27590ca2f9cc3888d52fe62e26012f769f19222a59d3902750de68b0dfe2a57a
+DIST gtkmm-2.18.2.tar.bz2 12215352 RMD160 775b15bebd884a9dec084d7e4faa8510c013a6f7 SHA1 ed58c6d8d0be82fc326cd67a8c2cf1762c30245e SHA256 dfc003e22ecdc046cbae731b24e077ed87efa0f9ca57a0735dfe716c560b474e
+EBUILD gtkmm-2.16.0.ebuild 938 RMD160 40a4ca0ea9cc26c10d700906df43ab159d781ddc SHA1 ad812ad6a8593a68cf5f2dc9accae25c60722035 SHA256 8aca9b1b66586de23ea147f38411f16a22cc279cc73287c4e82c2423e6112123
+EBUILD gtkmm-2.18.2.ebuild 1238 RMD160 7bd083ef3eb6eaf2b3d36b395801e2b218a6d8ea SHA1 262efe8ae4a89c3bb7692dd877200f9285ee89ab SHA256 5036aca7ae631ef900726718e53401f1a83461a2813f087fff8f9c59746763f7
+MISC ChangeLog 23009 RMD160 e357c05888c32da34fc8eef706344e3db2bd8365 SHA1 23c337d234f063f6788e891e9b1620a3ae86b932 SHA256 2949feb31adb2e9b49f3e8e6bf4669325d6f23ea14113b5b4c4a07b60b8661e5
 MISC metadata.xml 161 RMD160 1988530f97a742d78d3f3e99d15625f8a674260a SHA1 b034f3d668b50c57826ead5cfd17fcd2b68d19d6 SHA256 00ba82c241ad7007fe861877db3ae5aeaa967e05f0a6478e6ba9eb60ba31a3b6
